--- a/Fantastic-activists.tex
+++ b/Fantastic-activists.tex
@@ -169,6 +169,8 @@ The paper offers the following specific contributions.
 
 As mentioned in the introduction, the main limitation of our own previous approach 	\cite{Missier2017,Sousa2018,Barros2018} is that topology-based metrics such as h-index and centrality analysis could not be used, because the users identified through the content relevance approach led to collections of disconnected users. Essentially, each user would be considered relevant in isolation, but on the basis of a very sparse signal.
 %
+At the same time, traditional approaches aimed at discovering influential users, surveyed for instance in \cite{RIQUELME2016949}, require large and connecTwitterRank and rely on large social networks do not work well when the users we are seeking a 
+
 A broader motivation for the approach we advocate here is that relatively low-profile users are hard to identify by using traditional approaches based on global content harvesting and large Twitter networks.
 
 
