--- a/Fantastic-activists.tex
+++ b/Fantastic-activists.tex
@@ -81,6 +81,7 @@ In contrast, activists are, by our own definition, not famous people, rather the
 
 In contrast, in our current incremental approach, the idea is to first discover one or more online contexts associated with a topic, such as a social campaign or a local event.
 Our hypothesis is that each such  context provides a low-noise scope within which those users who would not otherwise be identified using standard network analysis techniques, are given a chance to ``stand out'' and emerge, as the limited scope may amplify their otherwise weak signal and isolate them from some of the global participants.
+
 We also make the hypothesis that, within each such focused context, we maybe able to  successfully use established social network metrics to identify users who are active within the context, i.e., those who engage in meaningful interactions that provide a limited but strong signal about their interest in the chosen topic. 
 %
 As contexts are temporally (and optionally also spatially) characterised, this approach also lends itself well to incremental user discovery,  and to building strong profiles of users who are observed in multiple contexts over time.
@@ -99,6 +100,37 @@ Thus, in a practical sense our study is on techniques for identifying those indi
 Note that we are not seeking people who have shown  specific interest in the fight against Zika or other epidemics, but rather, more generally, we are looking for people who have a recent and sustained history of social engagement. 
 %
 }
+
+
+\anote{moved from techapproach}
+
+As mentioned in the introduction, the main limitation of our own previous approach 	\cite{Missier2017,Sousa2018,Barros2018} is that topology-based metrics such as h-index and centrality analysis could not be used, because the users identified through the content relevance approach led to collections of disconnected users. Essentially, each user would be considered relevant in isolation, but on the basis of a very sparse signal.
+%
+At the same time, traditional approaches aimed at discovering influential users, surveyed for instance in \cite{RIQUELME2016949}, require large and connecTwitterRank and rely on large social networks do not work well when the users we are seeking a 
+
+A broader motivation for the approach we present here is that relatively low-profile users are hard to identify by using traditional approaches based on global content harvesting and large Twitter networks.
+
+
+
+\anote{
+	The main insight behind the process structure is to first identify suitable contexts (online campaigns, events around social issues) where the target user profiles stand out relative to the global network. 
+	
+	Rationale: observing users in context has the effect of drastically reducing the noise of general Twitter signal, relative to the general stream.  
+	
+	
+	Context discovery is currently the only step where human intervention is required (but that can be crowd-sourced as it does not involve deep specialist knowledge).
+	
+	\begin{itemize}
+		\item Conversations that take place within the context of an event are represented as dynamic weighted social network graphs (context network)
+		
+		\item Depending on the size and importance of the event, these networks may be first partitioned into smaller virtual overlapping communities, using the Demon community detection algorithm. \textbf{Rationale} for this: users who are low profile within the larger graph may emerge within a more local community. This is the same rationale as for the general ideas of  contexts)
+		\item users within each community (for small communities, we use the entire network) are then ranked according to some combination of all their features
+		\item Progressively build up stronger profiles of repeat users, by updating their strength using the new values for the metrics
+	\end{itemize}
+}
+
+\comment{Since our method relies on small networks that represent limited topical context, our challenge is to find metrics that operate well on small networks.}{rephrase}
+
 
 
 \subsection{Reference case study and running example}  \label{sec:reference}
@@ -166,39 +198,74 @@ The paper offers the following specific contributions.
 \section{Technical Approach}
 %%%%%%%%%%%%%%%%%%%%%
 
+\subsection{Users discovery process framework}   \label{sec:discovery}
 
-As mentioned in the introduction, the main limitation of our own previous approach 	\cite{Missier2017,Sousa2018,Barros2018} is that topology-based metrics such as h-index and centrality analysis could not be used, because the users identified through the content relevance approach led to collections of disconnected users. Essentially, each user would be considered relevant in isolation, but on the basis of a very sparse signal.
+The aim of the framework is to iteratively and efficiently discover user profiles from the Twitter post history that are relevant according to a specific set of user-defined criteria.
 %
-At the same time, traditional approaches aimed at discovering influential users, surveyed for instance in \cite{RIQUELME2016949}, require large and connecTwitterRank and rely on large social networks do not work well when the users we are seeking a 
+Two sets of criteria are used to establish relevance.
+Firstly, a context defined by a combination of spatio-temporal and keyword / hashtag constraints to describe the social topics of interest, for instance ``social health care campaigns'' or ``Zika awareness day in Rio de Janeiro''.
 
-A broader motivation for the approach we advocate here is that relatively low-profile users are hard to identify by using traditional approaches based on global content harvesting and large Twitter networks.
+Secondly, a set of features are specified to characterise the relevance of user profiles for a specific domain, along with a user-defined function to compose the features into a single value, i.e., a relevance score, which can then be used to rank user profiles both within and across contexts.
+The features are meant to capture some operational definition of relevance for specific kinds of user roles. 
+%
+A rich literature, summarised for instance in ~\cite{RIQUELME2016949}, exists where as multitude of different social user roles have been proposed, specifically but not exclusively for Twitter.
+These are either combinations of a limited set of elementary features, or the outcome of algorithms that operate on the Twitter social network~\cite{RIQUELME2016949}. 
+Our framework supports features that belong to three families of elementary features, which differ in the type of underlying data required to compute them:
+\begin{enumerate}
+	\item metrics  that rely solely on content and not on the user-user graph topology. These metrics are defined relative to a topic of interest, which in our framework is a context;
+	\item topological metrics that encode context-independent, long-lived relationships amongst users, i.e., follower/followee; and 
+	\item context-specific topological metrics, that is, metrics that encode user relationships that occur specifically within a context.
+\end{enumerate}
+For instance, the metrics described later in this section as  examples to illustrate the approach attempt to capture the intuitive notion of \textit{online activist}, which motivate our work.
+%
+The framework is generic and can be configured for specific domains by providing appropriate contexts, and for specific target user profiles by providing appropriate definitions of contexts and user features.
 
+The iterative user discovery process is as follows.
+During one iteration, contexts are used to retrieve all\footnote{Importantly, the Twitter API only allows a small fraction of the content history to be retrieved. We discuss this limitation in Sec. \ref{sec:limitations}.}
+	 Twitter posts that satisfy the criteria.
+User interactions within the context are reconstructed using retweet and mention activities, and represented as a user-user network for each context. 
+%
+Context-independent follower/followee user relationships are also retrieved from Twitter and added to the network as additional user-user edges.
+The size of the network is largely determined by the nature of the context, and may range from a few \hl{XX} users for a small context such as a local awareness event, to \hl{XX} users for a large national event that extends over a long timeframe, such as a political election campaign.
 
+Large networks are further partitioned into communities, using the well-known Daemon community-detection algorithm \cite{DEMON}.
+%
+The goal of this further partitioning is to further narrow the scope and thus to enable weak-signal users to emerge relative to other influencers, who are socially more prominent but, in the context of our work, less interesting.
+Relevance features are then computed for each user within the scope of each community. 
+Finally, a relevance score is associated with each user in the context, and used to update their global score in the database of relevant users.
 
-\anote{
-	The main insight behind the process structure is to first identify suitable contexts (online campaigns, events around social issues) where the target user profiles stand out relative to the global network. 
-	
-			 Rationale: observing users in context has the effect of drastically reducing the noise of general Twitter signal, relative to the general stream.  
-			
-			
-	Context discovery is currently the only step where human intervention is required (but that can be crowd-sourced as it does not involve deep specialist knowledge).
+The final step in the iteration aims to discover new contexts. 
+This is achieved by looking for relevant new keywords and hashtags and that are found in the post history (retrieved earlier) for the top-$k$ new users identified during the iteration. 
+This last step is currently not automated, and involves humans who are knowledgeable with the domain. 
+As such knowledge is not particularly deep or difficult to source, in the future we plan to crowdsource this particular step.
 
-		\begin{itemize}
-\item Conversations that take place within the context of an event are represented as dynamic weighted social network graphs (context network)
+The new context constructed using the new keywords and hashtags are used to initiate the next iteration. 
+While the process ends naturally when no new contexts are uncovered from the previous ones, the system continuously monitors the Twitter stream for recent contexts. These may typically include events that are temporally recurring, and use similar hashtags for each new edition. In this case, their relevance is assessed on the basis of their past history.
 
-			\item Depending on the size and importance of the event, these networks may be first partitioned into smaller virtual overlapping communities, using the Demon community detection algorithm. \textbf{Rationale} for this: users who are low profile within the larger graph may emerge within a more local community. This is the same rationale as for the general ideas of  contexts)
-			\item users within each community (for small communities, we use the entire network) are then ranked according to some combination of all their features
-\item Progressively build up stronger profiles of repeat users, by updating their strength using the new values for the metrics
-		\end{itemize}
-}
+The framework structure and data flow is illustrated in Fig. ~\ref{fig:twitterframework}.
+in summary, the following parameters need to be configured to customise the framework for a specific application:
 
-\comment{Since our method relies on small networks that represent limited topical context, our challenge is to find metrics that operate well on small networks.}{rephrase}
+	\begin{itemize}
+		\item Domain-specific context criteria
+		\item User relevance features, and function to combine the features into a score that can be used for ranking;
+		\item User selection threshold for context-specific metrics;
+		\item Lists of well-known users to be removed from the selection
+	\end{itemize}
 
-\subsection{Contexts}
+In the rest of this section we describe each of the elements of the framework in detail, using metrics that are specific to the online activists case study to illustrate.
+
+\begin{figure*}
+	\centering
+	\includegraphics[width=0.7\linewidth]{figures/TwitterFramework}
+	\caption{\comment{Schematic diagram of the user discovery framework }{this is a placeholder -- to be redrawn -PM }}
+	\label{fig:twitterframework}
+\end{figure*}
+
+\subsection{Contexts} \label{sec:contexts}
 
 As described In Sec. ~\ref{sec:reference}, contexts are meant to identify events or campaigns around social issues, which are characterised by temporal boundaries and by hashtags and/or keyword terms, and optionally also by spatial constraints, i.e., specified using a geographical bounding box.
 In the Twitter settings we refer to these as \textit{weak} contexts, because Twitter does not natively support the notion of event or campaign (unlike, for example, Facebook, Instagram, or Meetup).
-In abstract, we represent as generic context as
+We  denote a generic context as
 \begin{equation}
     C = \langle s, [t_1, t_2], K \rangle 
     \label{eq:context}
@@ -213,19 +280,9 @@ We say that both $t$ and  $u(t)$ are \textit{within context} $C$.
 We also define the complement $\Tilde{T}(C)$ of $T(C)$ as the set of tweets found using the same spatio-temporal constraints, but which do not contain any of the terms in $K$. More precisely, given a  context $C'= \langle s, [t_1, t_2], \emptyset \rangle$, we define $\Tilde{T}(C) = T(C') \setminus T(C)$. 
 We refer to these tweets, and their respective users, as ``out of context $C$''.
 
-\subsection{Online activists: a broad operational definition}
+\subsection{Features  for online activists}
 
-Many user roles have been proposed to characterise Twitter users. 
-These are either combinations of a limited set of elementary metrics, or the outcome of algorithms that operate on the Twitter social network~\cite{RIQUELME2016949}. 
-We distinguish amongst three families of Twitter-related user metrics, which differ in the type of underlying data required to compute them:
-\begin{enumerate}
-\item metrics  that rely solely on content and not on the user-user graph topology. These metrics are defined relative to a topic of interest, which in our framework is a context;
-\item topological metrics that encode context-independent, long-lived relationships amongst users, i.e., follower/followee; and 
-\item topological metrics that encode user relationships that occur specifically within a context.
-\end{enumerate}
-
-Our framework is generic in that it aims to support metrics from each of these three families.
-For the purpose of our case study, we propose a specific small set of such metrics, which together form   the basis for an operational definition of \textit{online activist}.
+For the purpose of our case study, we adopt a specific small set of such metrics, which together form   the basis for an operational definition of \textit{online activist}.
 The choice of metrics follows broadly the indications found in recent studies on online activism, namely \cite{Lotan2011} and  \cite{Poell2014}, and is as follows.
 
 For \textbf{content-based metrics} we use  \textit{Retweeting Rate} $CM_1$ (for ``Content Metric 1'', \textit{Retweeted Rate} $CM_2$, and  \textit{Topical Attachment}  $CM_3$, first proposed in \cite{Bizid:2015} (the use of \textit{Topical Attachment} was suggested in \cite{Poell2014}).
@@ -262,46 +319,41 @@ Finally, we use \textit{in-degree centrality} (one of the many measures of centr
 \end{equation}
 for each user $u$, where $N$ is the number of nodes in the network induced by $C$.
 
+\anote{not all steps will deserve their own subsection}
+	
+\subsection{Harvesting Content and Creating Context networks}   \label{sec:harvesting}
 
+\anote{this is just a note on how data is collected from Twitter}
+
+\subsection{Community detection}   \label{sec:communities}
+
+\anote{describe Daemon in summary}
+
+\subsection{User selection and ranking}   \label{sec:communities}
+
+\anote{use network analysis for user selection. Mention in-degree centrality as the metric of choice, and justify intuitively (against others from the literature)}
+\anote{remove white list users (manual step)}
+\anote{user selection threshold as a parameter}
+
+\anote{Then collect user content data for the top-k users, and compute their score using content metrics}
+\anote{explain how each of the three families of metrics is computed -- when, what additional work is needed}
+
+\subsection{New context discovery}   \label{sec:context-discovery}
+
+\anote{as mentioned above, this is still manual so not much to say really?}
+
+%\noindent Context $C$ $\rightarrow$ all users $U(C)$ \\
+%$U(C)$ $\rightarrow$ retrieve context metrics  $\rightarrow$ build context network $N(U(C))$ \\
+%$N(U(C))$ $\rightarrow$  detect communities \\
+%for each community:  compute $\{ \mathit{in-degree}(u)\}_{u\in U}$ (relative to the community)\\
+%
+%in parallel also compute:\\
+%- context-independent metrics\\
+%- content-based metrics\\
+%
+%}
 
 	
-\subsection{Users discovery process framework}   \label{sec:discovery}
-
-\anote{process structure (use one of Flavio's figures: \\
-
-\noindent Context $C$ $\rightarrow$ all users $U(C)$ \\
-$U(C)$ $\rightarrow$ retrieve context metrics  $\rightarrow$ build context network $N(U(C))$ \\
-$N(U(C))$ $\rightarrow$  detect communities \\
-for each community:  compute $\{ \mathit{in-degree}(u)\}_{u\in U}$ (relative to the community)\\
-
-in parallel also compute:\\
-- context-independent metrics\\
-- content-based metrics\\
-
-\noindent combine all metrics using a ranking function (which is a parameter in our framework)\\
-rank \\
-remove white list users \\
-threshold (parameter) \\
-update user profiles in DB\\
-
-\noindent also use the profiles to discover new contexts (automated hashtag extraction followed by manual selection step)
-
-}
-
-	
-	
-\anote{ it is a framework because there are important parameters: 
-	\begin{itemize}
-\item choice of specific metrics
-\item choice of function to combine the metrics for user ranking. 
-\item ranking thresholds
-\item white and black lists of users to remove from the top-k results
-\item context discovery criteria (which are domain-specific)
-	\end{itemize}
-
-}
-
-
 \subsection{Prototype architecture}	 
 
 	\anote{see ``Pipeline architecture'' in the presentation}
